--- a/tigahelp/templates/tigahelp/license_ca.html
+++ b/tigahelp/templates/tigahelp/license_ca.html
@@ -1,74 +1,77 @@
-﻿{% load staticfiles %}
+﻿{% extends "tigahelp/base.html" %}
+{% load staticfiles %}
 
-<!DOCTYPE html>
+{% block page_title %}
+    Tigatrapp License
+{% endblock %}
 
-<html style="width:100%; height:100%;">
-	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>Tigatrapp License</title>
-<link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %} />
 
-    </head>
-    <body>
-<div class="center">
-<h1>Tigatrapp</h1>
-</div>
-  
-<p>Tigatrapp és una aplicació que busca aprofitar el gran potencial de la ciutadania per a col·laborar en la recerca del mosquit tigre, gràcies a l'ús de les noves tecnologies. És, per tant, un exemple del potencial de les ciències ciutadanes. L'aplicació ha sigut desenvolupada pel grup de recerca <a href="http://movelab.net">Movement Ecology Lab</a> del Centre d'Estudis Avançats de Blanes (CEAB-CSIC). El codi font està en part basat en codi de l'aplicació "<a href="http://activityspaceproject.com">Space Mapper</a>" (desenvolupada per John R.B. Palmer), i codi de "<a href="http://pmp.princeton.edu/">The Human Mobility Project</a>" (Chang Y. Chung, Kathleen Li i Necati E. Ozgencil). El codi font de Tigatrapp està disponible al grup de recerca Movement Ecology Lab.</p>
+{% block content %}
+    <div class="center">
+        <h1>Tigatrapp</h1>
+    </div>
 
-<p>Copyright &#169; 2013, 2014 John R.B. Palmer, Aitana Oltra, Joan Garriga i Frederic Bartumeus</p>
- 
-<p> Tigatrapp és programari lliure: es pot redistribuir i/o modificar sota els termes de la llicència general pública GNU General Public License publicada per Free Software Foundation (versió 3 de la llicència o superior)</p>
+    <p>Tigatrapp és una aplicació que busca aprofitar el gran potencial de la ciutadania per a col·laborar en la recerca
+        del mosquit tigre, gràcies a l'ús de les noves tecnologies. És, per tant, un exemple del potencial de les
+        ciències ciutadanes. L'aplicació ha sigut desenvolupada pel grup de recerca <a href="http://movelab.net">Movement
+            Ecology Lab</a> del Centre d'Estudis Avançats de Blanes (CEAB-CSIC). El codi font està en part basat en codi
+        de l'aplicació "<a href="http://activityspaceproject.com">Space Mapper</a>" (desenvolupada per John R.B.
+        Palmer), i codi de "<a href="http://pmp.princeton.edu/">The Human Mobility Project</a>" (Chang Y. Chung,
+        Kathleen Li i Necati E. Ozgencil). El codi font de Tigatrapp està disponible al grup de recerca Movement Ecology
+        Lab.</p>
 
-<p>This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.</p>
+    <p>Copyright &#169; 2013, 2014 John R.B. Palmer, Aitana Oltra, Joan Garriga i Frederic Bartumeus</p>
 
-<p>You should have received a copy of the GNU General Public License
-    along with this program.  If not, see http://www.gnu.org/licenses.</p>
+    <p> Tigatrapp és programari lliure: es pot redistribuir i/o modificar sota els termes de la llicència general
+        pública GNU General Public License publicada per Free Software Foundation (versió 3 de la llicència o
+        superior)</p>
 
-<p>The code incorporated from Space Mapper is subject to the following terms:</p>
+    <p>This program is distributed in the hope that it will be useful,
+        but WITHOUT ANY WARRANTY; without even the implied warranty of
+        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+        GNU General Public License for more details.</p>
+
+    <p>You should have received a copy of the GNU General Public License
+        along with this program. If not, see http://www.gnu.org/licenses.</p>
+
+    <p>The code incorporated from Space Mapper is subject to the following terms:</p>
     <blockquote>
-    <p>Copyright &#169; 2012, 2013 John R.B. Palmer</p>
- 
-<p> This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.</p>
+        <p>Copyright &#169; 2012, 2013 John R.B. Palmer</p>
 
-<p>This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.</p>
+        <p> This program is free software: you can redistribute it and/or modify
+            it under the terms of the GNU General Public License as published by
+            the Free Software Foundation, either version 3 of the License, or
+            (at your option) any later version.</p>
 
-<p>You should have received a copy of the GNU General Public License
-    along with this program.  If not, see http://www.gnu.org/licenses.</p>
-    
-</blockquote>
-<p>The code incorporated from the Human Mobility Project is subject to the following terms:</p>
+        <p>This program is distributed in the hope that it will be useful,
+            but WITHOUT ANY WARRANTY; without even the implied warranty of
+            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+            GNU General Public License for more details.</p>
 
-<blockquote><p>Copyright &#169; 2010, 2011 Human Mobility Project</p>
+        <p>You should have received a copy of the GNU General Public License
+            along with this program. If not, see http://www.gnu.org/licenses.</p>
 
-<p>Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files (the
-"Software"), to deal in the Software without restriction, including
-without limitation the rights to use, copy, modify, merge, publish,
-distribute, sublicense, and/or sell copies of the Software, and to
-permit persons to whom the Software is furnished to do so, subject to
-the following conditions:</p>
+    </blockquote>
+    <p>The code incorporated from the Human Mobility Project is subject to the following terms:</p>
 
-<p>The above copyright notice and this permission notice shall be included
-in all copies or substantial portions of the Software.</p>
+    <blockquote><p>Copyright &#169; 2010, 2011 Human Mobility Project</p>
 
-<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
-TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p></blockquote>
-  
-</body>
-</html>
+        <p>Permission is hereby granted, free of charge, to any person obtaining
+            a copy of this software and associated documentation files (the
+            "Software"), to deal in the Software without restriction, including
+            without limitation the rights to use, copy, modify, merge, publish,
+            distribute, sublicense, and/or sell copies of the Software, and to
+            permit persons to whom the Software is furnished to do so, subject to
+            the following conditions:</p>
+
+        <p>The above copyright notice and this permission notice shall be included
+            in all copies or substantial portions of the Software.</p>
+
+        <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+            EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+            MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+            IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+            CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+            TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+            SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p></blockquote>
+{% endblock %}
