--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -1,41 +1,37 @@
+{% extends "tigahelp/base.html" %}
 {% load staticfiles %}
 
-<!DOCTYPE html>
+{% block page_title %}
+    About Tigatrapp
+{% endblock %}
 
-<html class='background' style="width:100%; height:100%;">
-	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>About Tigatrapp</title>
-<link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %} />
-</head>
-    <body>
 
-    <div class='main_container'>
-    <div class='text_container'>
+{% block content %}
 
-<div class="center">
-<h1>About Tigatrapp</h1>
-</div>
-
-<p>AtrapaelTigre.com is a citizen science project coordinated by the <a href="http://www.movelab.net">ICREA-Movement Ecology Lab</a> at the <a href="http://www.ceab.csic.es">Centre for Advanced Studies of Blanes</a> (<a href="http://www.csic.es">CSIC</a>).</p>
-
-<p>The project is being implemented in collaboration with CSIC scientific communication officers (Associate Vice President for Scientific Culture, Balearic Islands Delegation, Catalonia Delegation, and Valencia Delegation) and the <a href="http://www.um.es">University of Murcia</a>.</p>
-
-<p>The project is co-financed by the Spanish Foundation for Science and Technology (FECYT) and the Recercaixa research grant program within the framework of the project "Citizen Science: education and research". Bloom is collaborating in the fight against the tiger mosquito by also sponsoring the <a href="http://atrapaeltigre.com">AtrapaelTigre.com</a> project.</p>
-
-<p>The project also has the support of <a href="http://atrapaeltigre.com/web/ca/qui-som/">several other public and private institutions</a>.</p>
-
-<p>All of the photos used in Tigatrapp were provided by <a href="http://www.eritja.com">R. Eritja</a>. </p>
-
-        <p class='centeredImage'>
-            <a href='/credits/'><img style='max-width: 100%; height: auto;' src
-                    ={% static "tigahelp/credits_logos.jpg" %}></a>
-        </p>
+    <div class="center">
+        <h1>About Tigatrapp</h1>
     </div>
-</div>
 
+    <p>AtrapaelTigre.com is a citizen science project coordinated by the <a href="http://www.movelab.net">ICREA-Movement
+        Ecology Lab</a> at the <a href="http://www.ceab.csic.es">Centre for Advanced Studies of Blanes</a> (<a
+            href="http://www.csic.es">CSIC</a>).</p>
 
+    <p>The project is being implemented in collaboration with CSIC scientific communication officers (Associate Vice
+        President for Scientific Culture, Balearic Islands Delegation, Catalonia Delegation, and Valencia Delegation)
+        and the <a href="http://www.um.es">University of Murcia</a>.</p>
 
-</body>
-</html>
+    <p>The project is co-financed by the Spanish Foundation for Science and Technology (FECYT) and the Recercaixa
+        research grant program within the framework of the project "Citizen Science: education and research". Bloom is
+        collaborating in the fight against the tiger mosquito by also sponsoring the <a href="http://atrapaeltigre.com">AtrapaelTigre.com</a>
+        project.</p>
+
+    <p>The project also has the support of <a href="http://atrapaeltigre.com/web/ca/qui-som/">several other public and
+        private institutions</a>.</p>
+
+    <p>All of the photos used in Tigatrapp were provided by <a href="http://www.eritja.com">R. Eritja</a>. </p>
+
+    <p class='centeredImage'>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                ={% static "tigahelp/credits_logos.jpg" %}></a>
+    </p>
+{% endblock %}
