--- a/tigamap/templates/tigamap/report_map_basic.html
+++ b/tigamap/templates/tigamap/report_map_basic.html
@@ -1,4 +1,4 @@
-{% extends "tigamap/base.html" %}
+{% extends "tigamap/app.html" %}
 
 {% load staticfiles %}
 
@@ -40,6 +40,3 @@
 {% endblock %}
 
 
-{% block logo %}
-		<img src={% static "tigamap/tigatrapp_logo.png" %} style="position:absolute;width:30%;bottom:20px; right:10px">
-{% endblock %}
