--- a/tigamap/templates/tigamap/app.html
+++ b/tigamap/templates/tigamap/app.html
@@ -2,6 +2,69 @@
 
 {% load staticfiles %}
 
+{% block head_additions %}
+
+    <link rel="stylesheet" href={% static "tigamap/bootstrap-3.1.1-dist/css/bootstrap.min.css" %}>
+    <link rel="stylesheet" href={% static "tigamap/bootstrap-3.1.1-dist/css/bootstrap-theme.min.css" %}>
+    <link rel="stylesheet" href={% static "tigamap/map_app_style.css" %}>
+
+
+{% endblock %}
+
+{% block main_body %}
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Tigatrapp Map</a>
+            </div>
+            <ul class="nav navbar-nav pull-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sites<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/webmap/testingzone/sites/all/">All</a></li>
+                        <li><a href="/webmap/testingzone/sites/embornals_fonts/">Storm drains and fountains</a></li>
+                        <li><a href="/webmap/testingzone/sites/basins/">Basins</a></li>
+                        <li><a href="/webmap/testingzone/sites/buckets_wells/">Buckets and wells</a></li>
+                        <li><a href="/webmap/testingzone/sites/other/">Other</a></li>
+                    </ul>
+                </li>
+                <li><a href="/webmap/testingzone/adults/">Adults</a></li>
+                <li><a href="/webmap/testingzone/coverage/">Coverage</a></li>
+
+            </ul>
+
+
+            </ul>
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+{% endblock %}
+
 {% block logo %}
-		<img src={% static "tigamap/tigatrapp_logo.png" %} style="position:absolute;width:30%;bottom:20px; right:10px">
+
+    <a href="http://atrapaeltigre.com"><img
+            src={% static "tigamap/tigatrapp_logo.png" %} style="position:absolute;width:20%;bottom:20px;right:10px"></a>
+
+{% endblock %}
+
+
+{% block end_body %}
+
+    <script src="{% static "tigamap/jquery-1.11.1.min.js" %}"></script>
+
+    <script src="{% static "tigamap/bootstrap-3.1.1-dist/js/bootstrap.min.js" %}"></script>
+
 {% endblock %}
