--- a/tigahelp/templates/tigahelp/privacy_en.html
+++ b/tigahelp/templates/tigahelp/privacy_en.html
@@ -1,32 +1,31 @@
-﻿{% load staticfiles %}
+﻿{% extends "tigahelp/base.html" %}
+{% load staticfiles %}
 
-<!DOCTYPE html>
+{% block page_title %}
+    Privacy Policy
+{% endblock %}
 
-<html style="width:100%; height:100%;">
-	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>Tigatrapp Policies</title>
-<link href={% static "tigahelp/tigastyle.css" %} rel='stylesheet' />
 
-</head>
-    <body>
-<h1>Privacy Policy</h1>
+{% block content %}
 
-The AtrapaelTigre project takes data shared by volunteers and it makes
+    <div class="center">
+        <h2>Privacy Policy</h2>
+    </div>
+
+<p>The AtrapaelTigre project takes data shared by volunteers and it makes
 this data available to third parties and the public. In order the protect the privacy of its volunteers,
 the project aims to avoid collecting information from which any individual may be personally identified. It does not
 collect names, addresses, passwords, or any other personal information from volunteers. It collects the
 precise locations of
 volunteers when they submit reports, but it links this information only to the report and to a randomly-generated
-user ID. It also collects rough locations of volunteers throughout the day (in order to assess the areas that its
+user ID. It also collects rough locations of volunteers at random times (in order to assess the areas that its
 volunteers are monitoring for mosquitoes),
 but these locations are again linked only to randomly-generated user IDs. Volunteers may include notes and
 photographs in the reports they submit, but it is their responsibility not to include in these notes and photographs
 any information that they wish to keep private or any information that violates the privacy rights of others or is
-inconsistent with the AtrapaelTigre terms of use.
+inconsistent with the AtrapaelTigre terms of use.</p>
 
-The full list of information collected is as follows:
+<p>The full list of information collected is as follows:</p>
 <ul>
     <li>All of the reports volunteers submit on breeding sites, adult mosquito sightings,
         and tiger mosquito missions. This
@@ -51,5 +50,4 @@ The full list of information collected is as follows:
     </li>
 </ul>
 
-</body>
-</html>
+{% endblock %}
