--- a/tigahelp/templates/tigahelp/policies_es.html
+++ b/tigahelp/templates/tigahelp/policies_es.html
@@ -6,7 +6,7 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>Tigatrapp Policies</title>
+    <title>Políticas</title>
 
     <link rel="stylesheet" href={% static "tigahelp/pure-min.css" %}>
 
@@ -21,11 +21,11 @@
 
 <div class="splash-container">
     <div class="splash">
-        <h1 class="splash-head">Policies</h1>
+        <h1 class="splash-head">Políticas</h1>
 
         <p>
-            <a class="pure-button pure-button-primary" href="/terms/en/">User Agreement</a>
-            <a class="pure-button pure-button-primary" href="/privacy/en/">Privacy Policy</a>
+            <a class="pure-button pure-button-primary" href="/terms/en/">Acuerdo del usuario</a>
+            <a class="pure-button pure-button-primary" href="/privacy/en/">Política de privacidad</a>
         </p>
     </div>
 </div>
