--- a/tigahelp/templates/tigahelp/terms_ca.html
+++ b/tigahelp/templates/tigahelp/terms_ca.html
@@ -9,43 +9,41 @@
 {% block content %}
 
     <div class="center">
-        <h2>User Agreement</h2>
+        <h2>Acord de l'usuari</h2>
     </div>
 
+    <p>AtrapaelTigre.com és un projecte de ciència ciutadana coordinat per l'ICREA - Laboratori d'Ecologia del Moviment
+        del Centre d'Estudis Avançats de Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC). Al
+        projecte també hi participa el Consell Superior d'Investigacions Científiques i la Universitat de Múrcia.
+    </p>
 
+    <p>El projecte des basa en la recollida de dades sobre el mosquit tigre a Espanya per parts dels ciutadans&mdash;ciutadans
+        científics. Els ciutadans poden participar compartint dades a través de les diferents aplicacions Tigatrapp per
+        a dispositius mòbils. Per a això, cal que siguis major d'edat o que participis sota la supervisió d'un adult i
+        que estiguis d'acord amb la política de privacitat d’AtrapaelTigre, així com amb els següents termes:</p>
 
-<p>AtrapaelTigre is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the Centre
-for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Research Council and the
-    University of Murcia.</p>
-
-<p>The project relies on members of the public&mdash;citizen
-scientists&mdash;to collect data on the spread of tiger mosquitoes in Spain. You can participate by sharing
-data at AtrapaelTigre.com or through any of the Tigatrapp applications for mobile devices. To do so,
-you must be an adult or supervised by an adult and you must agree to the AtrapaelTigre privacy policy as well as the
-following terms:</p>
-
-<ol>
-    <li>
-        By sharing data with the AtrapaelTigre project, you grant the members of the research team a perpetual,
-        royalty-free, non-exclusive, sub-licensable license to: use, reproduce, modify, adapt, publish, translate,
-        create derivative works from, distribute, and exercise all copyright and publicity rights with respect to your
-        contribution worldwide and/or to incorporate your contribution in other works in any media now known or later
-        developed for the full term of any rights that may exist in your contribution.
-    </li>
-    <li>
-        You warrant that any data you share consists of information you have the right to make available to the
-        research team for the purposes specified
-        in item 1 above, is not defamatory, and does not infringe any law.
-    </li>
-    <li>
-        You indemnify the Movement Ecology Lab and its members and partners against all legal fees,
-        damages and other expenses that may be incurred by them as a
-        result of your breach of the above warranty.
+    <ol>
+        <li>
+            En compartir les teves dades amb el projecte AtrapaelTigre, concedeixes als membres de l'equip
+            d'investigació una llicència perpètua, lliure de royaltis, no exclusiva i sub-llicenciable, per: usar,
+            reproduir, modificar, adaptar, publicar, traduir, crear treballs derivats, distribuir i exercir tots els
+            drets d'autor i de publicitat a tot el món pel que fa a la teva contribució i/o incorporar la teva
+            contribució en altres treballs en qualsevol mitjà conegut actualment o desenvolupat en el futur.
         </li>
-    <li>
-        You waive any moral rights in your contribution for the purposes
-        specified in item 1 above.
-    </li>
-</ol>
+        <li>
+            Garanteixes que tens el dret de posar a disposició de l'equip d'investigació qualsevol dada que comparteixis
+            pels fins especificats en el punt 1 anterior i que aquestes dades no són difamatòries, ni infringeixen cap
+            llei.
+        </li>
+        <li>
+            Acceptes indemnitzar el Laboratori d'Ecologia del Moviment i els seus membres i col·laboradors per qualsevol
+            càrrega legal i/o monetària o per qualsevol altra despesa en la que puguessin incórrer com a resultat del
+            teu incompliment de la garantia anterior.
+        </li>
+        <li>
+            Renuncies a qualsevol dret moral en relació a la teva contribució per als fins especificats en el punt 1
+            anterior.
+        </li>
+    </ol>
 
 {% endblock %}
