--- a/tigahelp/templates/tigahelp/terms_es.html
+++ b/tigahelp/templates/tigahelp/terms_es.html
@@ -9,43 +9,44 @@
 {% block content %}
 
     <div class="center">
-        <h2>User Agreement</h2>
+        <h2>Acuerdo del usuario</h2>
     </div>
 
 
+    <p>AtrapaelTigre.com es un proyecto de ciencia ciudadana coordinado por el ICREA-Laboratorio de Ecología del
+        Movimiento del Centro de Estudios Avanzados de Blanes perteneciente al Consejo Superior de Investigaciones
+        Científicas (CEAB-CSIC). Participa también el Consejo Superior de Investigaciones Científicas y la Universidad
+        de Murcia.</p>
 
-<p>AtrapaelTigre is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the Centre
-for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Research Council and the
-    University of Murcia.</p>
+    <p>El proyecto depende de la recogida de datos por parte de la ciudadanía&mdash;ciudadanos científicos&mdash;sobre
+        el mosquito tigre en España. Los ciudadanos participan compartiendo datos a través de las distintas aplicaciones
+        Tigatrapp para dispositivos móviles. Para ello, será necesario ser mayor de edad o participar bajo la
+        supervisión de un adulto y estar de acuerdo con la política de privacidad de AtrapaelTigre, así como con los
+        siguientes términos: </p>
 
-<p>The project relies on members of the public&mdash;citizen
-scientists&mdash;to collect data on the spread of tiger mosquitoes in Spain. You can participate by sharing
-data at AtrapaelTigre.com or through any of the Tigatrapp applications for mobile devices. To do so,
-you must be an adult or supervised by an adult and you must agree to the AtrapaelTigre privacy policy as well as the
-following terms:</p>
 
-<ol>
-    <li>
-        By sharing data with the AtrapaelTigre project, you grant the members of the research team a perpetual,
-        royalty-free, non-exclusive, sub-licensable license to: use, reproduce, modify, adapt, publish, translate,
-        create derivative works from, distribute, and exercise all copyright and publicity rights with respect to your
-        contribution worldwide and/or to incorporate your contribution in other works in any media now known or later
-        developed for the full term of any rights that may exist in your contribution.
-    </li>
-    <li>
-        You warrant that any data you share consists of information you have the right to make available to the
-        research team for the purposes specified
-        in item 1 above, is not defamatory, and does not infringe any law.
-    </li>
-    <li>
-        You indemnify the Movement Ecology Lab and its members and partners against all legal fees,
-        damages and other expenses that may be incurred by them as a
-        result of your breach of the above warranty.
+    <ol>
+        <li>
+            Al compartir tus datos con el proyecto AtrapaelTigre, concedes a los miembros del equipo de investigación
+            una licencia perpetua, libre de royaltys, no-exclusiva y sub-licenciable, para: usar, reproducir, modificar,
+            adaptar, publicar, traducir, crear trabajos derivados, distribuir y ejercer todos los derechos de autor y de
+            publicidad en todo el mundo respecto a tu contribución y/o incorporar tu contribución en otros trabajos en
+            cualquier medio conocido actualmente o desarrollado en el futuro.
         </li>
-    <li>
-        You waive any moral rights in your contribution for the purposes
-        specified in item 1 above.
-    </li>
-</ol>
+        <li>
+            Garantizas que tienes el derecho de poner a disposición del equipo de investigación cualquier dato que
+            compartas para los fines especificados en el punto 1 anterior y que estos datos no son difamatorios, ni
+            infringen ninguna ley.
+        </li>
+        <li>
+            Aceptas indemnizar el Laboratorio de Ecología del Movimiento y a sus miembros y colaboradores de cualquier
+            carga legal y/o monetaria y de cualquier otro gasto en el que pudiera incurrir como resultado de tu
+            incumplimiento de la garantía anterior.
+        </li>
+        <li>
+            Renuncias a cualquier derecho moral en relación a tu contribución para los fines especificados en el punto 1
+            anterior.
+        </li>
+    </ol>
 
 {% endblock %}
