--- a/tigamap/templates/tigamap/report_map.html
+++ b/tigamap/templates/tigamap/report_map.html
@@ -1,12 +1,14 @@
 {% extends "tigamap/app.html" %}
 
 {% load staticfiles %}
+{% load i18n %}
 
 {% load leaflet_tags %}
 
 {% block leaflet_code %}
 
-    {% if type == 'adult' %}
+
+    {% if report_type == 'adults' %}
         {% leaflet_js plugins="marker_cluster_yellow" %}
         {% leaflet_css plugins="marker_cluster_yellow" %}
    {% else %}
@@ -16,16 +18,13 @@
 
 
     <script type="text/javascript">
+
         function map_init_basic(map, options) {
 
-      //      var oms = new OverlappingMarkerSpiderfier(map);
 
-            var markers_all = new L.MarkerClusterGroup();
-            var markers_medium = new L.MarkerClusterGroup();
-            var markers_high = new L.MarkerClusterGroup();
+            var markers_clustered = new L.MarkerClusterGroup();
 
-            var low = new L.LayerGroup();
-            var high = new L.LayerGroup();
+            var markers_basic = new L.LayerGroup();
 
             var YellowIcon = L.Icon.Default.extend({
                 options: {
@@ -34,7 +33,7 @@
             });
 
             var thisIcon = new L.Icon.Default;
-            {% if type == 'adult' %}
+            {% if report_type == 'adults' %}
                 thisIcon = new YellowIcon();
             {% endif %}
 
@@ -46,35 +45,31 @@
                 {% if report.lat != None and report.lon != None %}
                     marker = L.marker([{{ report.lat }}, {{ report.lon }}], {icon: thisIcon});
                     if(show_popups){
-                        marker.bindPopup('{{ report.site_type }}<table style="font-size:small;"><tr><td>id:</td><td>' +
+                    {% if report_type == 'adults' %}
+                        marker.bindPopup('<table style="font-size:small;"><tr><td>id:</td><td>' +
                                 '{{ report.report_id }}</td></tr><tr><td>lat:</td>'+
                                 '<td>{{ report.lat }}</td></tr><tr><td>lon:</td><td>'+
                                 '{{ report.lon }}</td></tr><tr><td>prob:</td><td>'+
                                 '{{ report.tigaprob }}</td></tr></table>');
-                    }
-                    markers_all.addLayer(marker)
-//                    oms.addMarker(marker);
-                    {% if report.tigaprob > 0 %}
-                        marker = L.marker([{{ report.lat }}, {{ report.lon }}], {icon: thisIcon});
-                        markers_medium.addLayer(marker)
-  //                      oms.addMarker(marker);
-                    {% endif %}
-                    {% if report.tigaprob == 1 %}
-                        marker = L.marker([{{ report.lat }}, {{ report.lon }}], {icon: thisIcon});
-                        markers_high.addLayer(marker)
-    //                    oms.addMarker(marker);
-
-                    {% endif %}
+                   {%  else %}
+                        marker.bindPopup('<table style="font-size:small;"><tr><td>id:</td><td>' +
+                                '{{ report.report_id }}</td></tr><tr><td>lat:</td>'+
+                                '<td>{{ report.lat }}</td></tr><tr><td>lon:</td><td>'+
+                                '{{ report.lon }}</td></tr><tr><td>type:</td><td>'+
+                                '{{ report.site_type }}</td></tr></table>');
+                   {%  endif %}
+                   }
+                    markers_clustered.addLayer(marker);
+                    markers_basic.addLayer(marker);
                 {% endif %}
             {% endfor %}
 
             var baseMaps = {
-                "All reports": markers_all,
-                "Medium-probability reports": markers_medium,
-                "High-probability reports": markers_high
+                "clusters": markers_clustered,
+                "points": markers_basic
             };
 
-            markers_all.addTo(map);
+            markers_clustered.addTo(map);
 
             L.control.layers(baseMaps, null).addTo(map);
         }
